CU-6um7qk Fix preview mode display on IE

--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,9 @@ body.editing.path-course-view li.activity.videotime.preview_mode {
 }
 
 /** IE backwards compatibility **/
-.video-image-preview .img-responsive {
+body.ie .video-image-preview .img-responsive {
     width: 100%;
+    max-height: 500px;
 }
 
     /* Totara styling */
